updated business canvas

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,8 +2,8 @@
 	"LANDINGPAGE":{
 		"Title": "Entrepreneur Studio",
 		"Title1": "Avantages",
-		"Title2": "Particulier",
-		"Title3": "Tarifs",
+		"Title2": "Comment ca marche ?",
+		"Title3": "Partenaire",
 		"Register": "Inscription",
 		"Connection": "Connection",
 		"MainContent": "Lancez votre projet avec la plateforme gratuite 100% dédiée aux entrepreneurs",
@@ -11,10 +11,17 @@
 		"FreeStart": "Accès gratuit et sans engagement",
 		"Content1Title": "Lancez votre projet avec la plateforme gratuite 100% dédiée aux entrepreneurs",
 		"Content1Text": "Entrepreneur Studio permet de créer et booster votre activité. Validation d’idée, business plan, marketing, communication, développement, investissement… Tous les outils et ressources pour lancer votre projet étape par étape.",
-		"pictureAndText1Title": "Créer, valider et faire grandir votre projet étape par étape",
+		"pictureAndText1Title": "1. Se connecter",
+		"pictureAndText1Text": "Créez votre profil avec votre adresse email ou votre reseau social préféré",
+		"pictureAndText2Title": "2. Démarrer",
+		"pictureAndText2Text": "Commencez votre projet en ligne securisé, disponible partout, tout le temps",
+		"pictureAndText3Title": "3. Collaborer",
+		"pictureAndText3Text": "Invitez vos associés, vos amis, vos partenaires à rejoindre le projet et à faire leurs retours",
+		"pictureAndText4Title": "4. Développer",
+		"pictureAndText4Text": "Utilisez les outils internes pour valider, créer, et booster votre activité",
 		"KnowMoreButton": "En savoir plus",
 		"Icon1Title": "Protégé",
-		"Icon1Text": "Controle et sécurité d'accès à votre projet",
+		"Icon1Text": "Contrôle et sécurité d'accès à votre projet",
 		"Icon2Title": "Accessible",
 		"Icon2Text": "Stockage dans le cloud et mode hors-ligne",
 		"Icon3Title": "Collaboratif",
@@ -22,21 +29,48 @@
 		"Icon4Title": "Connecté ",
 		"Icon4Text": "Sur ordinateur ou télephone",
 		"Icon5Title": "Pratique ",
-		"Icon5Text": "Des resources et outils integrés"
+		"Icon5Text": "Des ressources et outils integrés",
+		"Content2Title": "Comment ça marche",
+		"subContentTitle1": "Un environnement unique, des outils actionnables, une communauté active pour valider, lancer et booster son projet",
+		"Icon1SubTitle": "Le garage",
+		"Icon1SubText": "Un espace pour créer, suivre et partager son projet avec ses associés et ses partenaires",
+		"Icon2SubTitle": "La boite à outils",
+		"Icon2SubText": "Les meilleurs outils et applications du moment disponibles en un seul endroit, classés par catégories",
+		"Icon3SubTitle": "Le système D",
+		"Icon3SubText": "Le forum d’entraide et de bons plans des entrepreneurs",
+		"contactUs": "Contactez-nous"
 	},
 	"SIGNUP":{
-		"Title": "Creer un compte",
+		"Title": "Créer votre compte",
 		"GoogleLogin": "se connecter avec google",
 		"Role": "Je veux rejoindre Entrepreneur-Studio en tant que : ",
 		"Entrepreneur": "Entrepreneur",
-		"Incubator": "Incubateur"
+		"YouAre": "Vous êtes : ",
+		"Incubator": "Conseil",
+		"ShortText": "Rejoignez la communauté d'entrepreneurs",
+		"Email": "Email",
+		"Password": "Mot de passe",
+		"LoginWithSocial": "ou bien utilisez vos reseaux sociaux preferes",
+		"EmailLogin": "Creer son compte"
 	},
 	"LOGIN":{
-		"Title": "Vous avez déjà un compte ?",
-		"GoogleLogin": "se connecter avec google"	
+		"Title": "De retour au travail :) ",
+		"SubTitle": "Veuillez vous identifier pour continuer ",
+		"EmailLogin": "Se connecter",
+		"Email": "Email",
+		"Password": "Mot de passe",
+		"ForgetPassword": "Mot de passe oublie ?",
+		"TitleForgoPassword": "Mot de passe oublie ?",
+		"SubTitleForgoPassword": "Vous avez oublié votre mot de passe ? Pas de soucis, remplissez votre addresse email et vous vous enverrons par email un nouveau mot de passe.",
+		"ResetPasswordButton": "Valider",
+		"ResetPasswordCancelButton": "Annuler",
+		"LoginWithSocial": "ou bien utilisez vos reseaux sociaux preferes"
 	},
 	"COMMON":{
-		"Logout": "Logout" 
+		"Logout": "Logout" ,
+		"Profile": "Profile",
+		"MyProjects": "Mes projets",
+		"AppTitle": "Entrepreneur Studio"
 	},
 	"PROJECT_SUMMARY": {
 		"ProjectTitle": "Votre project",
@@ -47,35 +81,97 @@
 		"ProjectUpdate": "Modifier ",
 		"ProjectSave": "Sauvegarder",
 		"BusinessCanvasTitle": "Business Canvas",
-		"BusinessCanvasProblem": "Probleme",
-		"BusinessCanvasProblemPlaceholder": "Quel est le problème que votre entreprise résout ? ",
+		"BusinessCanvasProblem": "Problème ",
+		"BusinessCanvasProblemPlaceholder": "Quels sont les principaux probèmes que vous souhaitez résoudre ?",
 		"BusinessCanvasProblemTitle": "Le problème",
 		"BusinessCanvasProblemSubTitle": "Votre point de départ",
 		"BusinessCanvasProblemGuidance": "Il s'agit là du point d'entrée de votre analyse. Vous devez identifier clairement 'quel est le problème du client que vous ciblez', Qu'est ce que cela lui coûte en termes d'argent, temps, effort, etc. ?' 'Quels sont ses caractéristiques, ses comportements, ses habitudes ?' Bref, il s’agit d'une véritable étude à mener .",
+		"BusinessCanvasProblemExample": "example",
 		"BusinessCanvasExistingAlternatives": "Alternatives existantes",
 		"BusinessCanvasExistingAlternativesTitle": "Alternatives existantes",
 		"BusinessCanvasExistingAlternativesSubTitle": "Alternatives existantes",
 		"BusinessCanvasExistingAlternativesGuidance": "Alternatives existantes",
-		"ExistingAlternativesPlaceholder": "Existe-t-il des solutions sur le marché ?",
+		"BusinessCanvasExistingAlternativesExample": "Alternatives existantes",
+		"BusinessCanvasExistingAlternativesPlaceholder": "Comment ces problèmes sont actuellement résolus ? ",
 		"BusinessCanvasSolution": "Solution",
-		"SolutionPlaceholder": "Quelle est la solution que vous allez mettre en oeuvre ? ",
-		"BusinessCanvasKeyMetrics": "Metriques ",
-		"BusinessCanvasKeyMetricsPlaceholder": "Quelles sont les metriques que vous allez surveiller ? ",
-		"BusinessCanvasUniqueValueProposition": "Proposition de valeur unique ",
-		"BusinessCanvasUniqueValuePropositionPlaceholder": "blablablabla ",
-		"BusinessCanvasUnfairAdvantage": "Avantage sur la compétition",
-		"BusinessCanvasUnfairAdvantagePlaceholder": "Avantage sur la compétition placeholder",
-		"BusinessCanvasChannels": "Channels",
-		"BusinessCanvasChannelsPlaceholder": "Channels placeholder",
+		"BusinessCanvasSolutionTitle": "Solution",
+		"BusinessCanvasSolutionSubTitle": "Solution",
+		"BusinessCanvasSolutionGuidance": "Solution",
+		"BusinessCanvasSolutionExample": "Solution",
+		"BusinessCanvasSolutionPlaceholder": "Quelle est la solution que vous allez mettre en oeuvre ? ",
+		"BusinessCanvasKeyMetrics": "Indicateurs de performance",
+		"BusinessCanvasKeyMetricsTitle": "Indicateurs de performance",
+		"BusinessCanvasKeyMetricsSubTitle": "Metriques",
+		"BusinessCanvasKeyMetricsGuidance": "Metriques",
+		"BusinessCanvasKeyMetricsExample": "Metriques",
+		"BusinessCanvasKeyMetricsPlaceholder": "Quels indicateurs devez-vous surveiller pour voir l’evolution de votre activité ? ",
+		"BusinessCanvasUniqueValueProposition": "Proposition de valeur",
+		"BusinessCanvasUniqueValuePropositionTitle": "Proposition de valeur",
+		"BusinessCanvasUniqueValuePropositionSubTitle": "Proposition de valeur",
+		"BusinessCanvasUniqueValuePropositionGuidance": "Proposition de valeur",
+		"BusinessCanvasUniqueValuePropositionExample": "Proposition de valeur",
+		"BusinessCanvasUniqueValuePropositionPlaceholder": "En quoi votre offre répond-elle efficacement au besoin du marché? En quoi est-elle différente et meilleure que les autres ? ",
+		"BusinessCanvasUnfairAdvantage": "Avantages compétitifs",
+		"BusinessCanvasUnfairAdvantageTitle": "Avantages compétitifs",
+		"BusinessCanvasUnfairAdvantageSubTitle": "Avantages compétitifs",
+		"BusinessCanvasUnfairAdvantageGuidance": "Avantages compétitifs",
+		"BusinessCanvasUnfairAdvantageExample": "Avantages compétitifs",
+		"BusinessCanvasUnfairAdvantagePlaceholder": "En quoi avez-vous une longueur d’avance sur la concurrence? Comment vous-protégez vous d’elle?",
+		"BusinessCanvasChannels": "Canaux",
+		"BusinessCanvasChannelsTitle": "Canaux",
+		"BusinessCanvasChannelsSubTitle": "Canaux",
+		"BusinessCanvasChannelsGuidance": "Canaux",
+		"BusinessCanvasChannelsExample": "Canaux",
+		"BusinessCanvasChannelsPlaceholder": "Par quels canaux de communication et de distribution touchez-vous vos clients ? Quel est le parcours client ?",
 		"BusinessCanvasCustomerSegmentation": "Segmentation cliente",
-		"BusinessCanvasCustomerSegmentationPlaceholder": "Segmentation cliente placeholder",
+		"BusinessCanvasCustomerSegmentationTitle": "Segmentation cliente",
+		"BusinessCanvasCustomerSegmentationSubTitle": "Segmentation cliente",
+		"BusinessCanvasCustomerSegmentationGuidance": "Segmentation cliente",
+		"BusinessCanvasCustomerSegmentationExample": "Segmentation cliente",
+		"BusinessCanvasCustomerSegmentationPlaceholder": "Qui sont les utilisateurs? Qui sont les clients (ceux qui payent) ?",
 		"BusinessCanvasEarlyAdopters": "Adopteurs précoces",
 		"BusinessCanvasEarlyAdoptersPlaceholder": "Adopteurs précoces placeholder",
-		"BusinessCanvasCostStructure": "Structure des couts",
-		"BusinessCanvasCostStructurePlaceholder": "Structure des couts placeholder",
-		"BusinessCanvasRevenueStreams": "Source de revenus",
-		"BusinessCanvasRevenueStreamsPlaceholder": "Source de revenus placeholder",
-		"FillIt": "A remplir !"
-
+		"BusinessCanvasCostStructure": "Coûts",
+		"BusinessCanvasCostStructureTitle": "Coûts",
+		"BusinessCanvasCostStructureSubTitle": "Coûts",
+		"BusinessCanvasCostStructureGuidance": "Coûts",
+		"BusinessCanvasCostStructureExample": "Coûts",
+		"BusinessCanvasCostStructurePlaceholder": "Quels sont les coûts (ponctuels et récurrents) liés au lancement et au fonctionnement de votre activité ?",
+		"BusinessCanvasRevenueStreams": "Flux de revenus", 
+		"BusinessCanvasRevenueStreamsTitle": "Flux de revenus",
+		"BusinessCanvasRevenueStreamsSubTitle": "Flux de revenus",
+		"BusinessCanvasRevenueStreamsGuidance": "Flux de revenus",
+		"BusinessCanvasRevenueStreamsExample": "Flux de revenus",
+		"BusinessCanvasRevenueStreamsPlaceholder": "D’où vient l’argent ? Quel est le modèle économique ?",
+		"BusinessCanvasRevenueKeyPartners": "Partenaires clés",
+		"BusinessCanvasRevenueKeyPartnersTitle": "Partenaires clés",
+		"BusinessCanvasRevenueKeyPartnersSubTitle": "Partenaires clés",
+		"BusinessCanvasRevenueKeyPartnersGuidance": "Partenaires clés",
+		"BusinessCanvasRevenueKeyPartnersExample": "Partenaires clés",
+		"BusinessCanvasRevenueKeyPartnersPlaceholder": "Quels sont vos partenaires ou fournisseurs clés pour éxecuter votre solution? Quelles sont les ressources et activités apportées par vos partenaires?",
+		"FillIt": "A remplir !",
+		"ShowExample": "Exemple"
+	},
+	"ONBOARDINGPAGE":{
+		"Title":"Bienvenue !!",
+		"SubTitle":"Apprenons a se connaitre",
+		"CurrentSituation":"Situation actuelle :",
+		"Experience":"Experience :",
+		"Motivation":"Motivation personnelle :",
+		"CreateProjectButton":"Crée ton premier projet maintenant !",
+		"TitleStep1":"Crée ton premier projet !",
+		"SubTitleStep1":"Définis les informations essentielles de ton projet",
+		"ProjectName":"Nom du project:",
+		"StartNewProjectButton":"Crée ton projet !"
+	},
+	"PARTNERS":{
+		"Title":"Devenir partenaire",
+		"SubTitle2":"Vous aidez ou voulez aider les entrepreneurs? Partagez vos idées ou souhaits de partenariat. ",
+		"SubTitle3":"'SEUL on va plus vite, ENSEMBLE on va plus loin' ",
+		"Name":"Nom: ",
+		"Email":"Email: ",
+		"Activity":"Domaine d’activité: ",
+		"Description":"Description: ",
+		"Send":"Envoyer"
 	}
 }
