--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -143,26 +143,72 @@
 		"BusinessCanvasRevenueStreamsGuidance": "Flux de revenus",
 		"BusinessCanvasRevenueStreamsExample": "Flux de revenus",
 		"BusinessCanvasRevenueStreamsPlaceholder": "D’où vient l’argent ? Quel est le modèle économique ?",
-		"BusinessCanvasRevenueKeyPartners": "Partenaires clés",
-		"BusinessCanvasRevenueKeyPartnersTitle": "Partenaires clés",
-		"BusinessCanvasRevenueKeyPartnersSubTitle": "Partenaires clés",
-		"BusinessCanvasRevenueKeyPartnersGuidance": "Partenaires clés",
-		"BusinessCanvasRevenueKeyPartnersExample": "Partenaires clés",
-		"BusinessCanvasRevenueKeyPartnersPlaceholder": "Quels sont vos partenaires ou fournisseurs clés pour éxecuter votre solution? Quelles sont les ressources et activités apportées par vos partenaires?",
+		"BusinessCanvasKeyPartners": "Partenaires clés",
+		"BusinessCanvasKeyPartnersTitle": "Partenaires clés",
+		"BusinessCanvasKeyPartnersSubTitle": "Partenaires clés",
+		"BusinessCanvasKeyPartnersGuidance": "Partenaires clés",
+		"BusinessCanvasKeyPartnersExample": "Partenaires clés",
+		"BusinessCanvasKeyPartnersPlaceholder": "Quels sont vos partenaires ou fournisseurs clés pour éxecuter votre solution? Quelles sont les ressources et activités apportées par vos partenaires?",
+		"BusinessCanvasKeyActivities": "Activités clés",
+		"BusinessCanvasKeyActivitiesTitle": "Activités clés",
+		"BusinessCanvasKeyActivitiesSubTitle": "Activités clés",
+		"BusinessCanvasKeyActivitiesGuidance": "Activités clés",
+		"BusinessCanvasKeyActivitiesExample": "Partenaires clés",
+		"BusinessCanvasKeyActivitiesPlaceholder": "Quels sont vos partenaires ou fournisseurs clés pour éxecuter votre solution? Quelles sont les ressources et activités apportées par vos partenaires?",
 		"FillIt": "A remplir !",
+		"AddNewItem": "Ajouter un nouvel item",
+		"AddNewItemPlaceHolder": "Entrez votre texte...",
+		"SaveItem": "Sauvegarder",
+		"DeleteItem": "Supprimer",
 		"ShowExample": "Exemple"
 	},
 	"ONBOARDINGPAGE":{
 		"Title":"Bienvenue !!",
-		"SubTitle":"Apprenons a se connaitre",
-		"CurrentSituation":"Situation actuelle :",
-		"Experience":"Experience :",
-		"Motivation":"Motivation personnelle :",
-		"CreateProjectButton":"Crée ton premier projet maintenant !",
-		"TitleStep1":"Crée ton premier projet !",
-		"SubTitleStep1":"Définis les informations essentielles de ton projet",
-		"ProjectName":"Nom du project:",
-		"StartNewProjectButton":"Crée ton projet !"
+		"SubTitle":"APPRENONS À SE CONNAÎTRE",
+		"CurrentSituation":"Quelle est votre situation actuelle",
+		"CurrentSituationItem1":"étudiant", 
+		"CurrentSituationItem2":"salarié",
+		"CurrentSituationItem3":"congé sabbatique ou création entreprise",
+		"CurrentSituationItem4":"chômage",
+		"CurrentSituationItem5":"indépendant",
+		"CurrentSituationItem6":"retraité",
+		"Experience":"Quelle expérience avez-vous en lien avec votre projet ",
+		"ExperienceItem1":"novice",
+		"ExperienceItem2":"expérimenté ",
+		"ExperienceItem3":"expert",
+		"Motivation":"Quel est votre objectif",
+		"MotivationItem1":"On verra bien",
+		"MotivationItem2":"création d’entreprise dans plus d’1 an",
+		"MotivationItem3":"création d’entreprise dans moins d’1 an",
+		"MotivationItem4":"en cours de création",
+		"MotivationItem5":"entreprise créée à développer",
+		"CreateProjectButton":"Démarrez votre premier projet maintenant !",
+		"SubTitleStep1":"Votre Projet",
+		"ProjectName":"Nom officiel ou nom de code (peut être modifié plus tard)",
+		"ProjectDomains":"Dans quel secteur d’activité (liste des secteurs)",
+		"ProjectMaturity":"Maturité du projet",
+		"ProjectMaturityItem1":"valider mon produit et/ou mon marché)",
+		"ProjectMaturityItem2":"développement (je lance mon entreprise)",
+		"ProjectMaturityItem3":"accélération (je veux grossir)",
+		"StartNewProjectButton1":"Specifiez vos ressources !",
+		"StartNewProjectButton2":"Créez votre projet !",
+		"SubTitleStep2":"Vos Ressources",
+		"ProjectTeam":"Votre équipe ",
+		"ProjectTeamItem1":"seul",  
+		"ProjectTeamItem2":"seul et en recherche d’associés",  
+		"ProjectTeamItem3":"plusieurs associés au complet",  
+		"ProjectTeamProfile":"Votre profil d’équipe ",  
+		"ProjectTeamProfileItem1":"technique",  
+		"ProjectTeamProfileItem2":"commercial",  
+		"ProjectTeamProfileItem3":"finance/administratif",  
+		"ProjectTeamProfileItem4":"expert",  
+		"AssociateNumber":"Nombre d'associé(s)" , 
+		"FinancialResources" : "Ressource financière (fait ou en prévision)" ,
+		"FinancialResourcesItem1" : "à définir" ,
+		"FinancialResourcesItem2" : "fond personnel" ,
+		"FinancialResourcesItem3" : "prêt bancaire" ,
+		"FinancialResourcesItem4" : "levée de fond"
+
 	},
 	"PARTNERS":{
 		"Title":"Devenir partenaire",
@@ -173,5 +219,12 @@
 		"Activity":"Domaine d’activité: ",
 		"Description":"Description: ",
 		"Send":"Envoyer"
+	},
+	"TOOL":{
+		"Name":"Name",
+		"BrandName":"Brand",
+		"ImgUrl":"URL de l'image",
+		"Description":"Description",
+		"Labels":"Labels"
 	}
 }
