--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -23,7 +23,7 @@
 		"Icon1Title": "Protégé",
 		"Icon1Text": "Contrôle et sécurité d'accès à votre projet",
 		"Icon2Title": "Accessible",
-		"Icon2Text": "Stockage dans le cloud et mode hors-ligne",
+		"Icon2Text": "Stockage dans le cloud",
 		"Icon3Title": "Collaboratif",
 		"Icon3Text": "Partage possible avec vos associés et partenaires",
 		"Icon4Title": "Connecté ",
@@ -50,7 +50,8 @@
 		"ShortText": "Rejoignez la communauté d'entrepreneurs",
 		"Email": "Email",
 		"Password": "Mot de passe",
-		"LoginWithSocial": "ou bien utilisez vos reseaux sociaux preferes",
+		"LoginWithSocial": "ou",
+		"LoginWithEmail": "ou",
 		"EmailLogin": "Creer son compte"
 	},
 	"LOGIN":{
@@ -64,7 +65,8 @@
 		"SubTitleForgoPassword": "Vous avez oublié votre mot de passe ? Pas de soucis, remplissez votre addresse email et vous vous enverrons par email un nouveau mot de passe.",
 		"ResetPasswordButton": "Valider",
 		"ResetPasswordCancelButton": "Annuler",
-		"LoginWithSocial": "ou bien utilisez vos reseaux sociaux preferes"
+		"LoginWithSocial": "ou bien utilisez vos reseaux sociaux preferes",
+		"LoginWithEmail": "ou bien utilisez votre email"
 	},
 	"COMMON":{
 		"Logout": "Logout" ,
@@ -78,6 +80,7 @@
 		"ProjectLogoUrl": "Logo",
 		"ProjectElevatorPitch": "Elevator Pitch",
 		"ProjectWebsiteUrl": "Site web",
+		"ProjectSocialNetworks": "Réseaux sociaux",
 		"ProjectUpdate": "Modifier ",
 		"ProjectSave": "Sauvegarder",
 		"BusinessCanvasTitle": "Business Canvas",
@@ -130,7 +133,7 @@
 		"BusinessCanvasCustomerSegmentationExample": "Segmentation cliente",
 		"BusinessCanvasCustomerSegmentationPlaceholder": "Qui sont les utilisateurs? Qui sont les clients (ceux qui payent) ?",
 		"BusinessCanvasEarlyAdopters": "Adopteurs précoces",
-		"BusinessCanvasEarlyAdoptersPlaceholder": "Adopteurs précoces placeholder",
+		"BusinessCanvasEarlyAdoptersPlaceholder": "Quel est le profil de vos premiers utilisateurs ? ",
 		"BusinessCanvasCostStructure": "Coûts",
 		"BusinessCanvasCostStructureTitle": "Coûts",
 		"BusinessCanvasCostStructureSubTitle": "Coûts",
@@ -155,59 +158,67 @@
 		"BusinessCanvasKeyActivitiesGuidance": "Activités clés",
 		"BusinessCanvasKeyActivitiesExample": "Partenaires clés",
 		"BusinessCanvasKeyActivitiesPlaceholder": "Quels sont vos partenaires ou fournisseurs clés pour éxecuter votre solution? Quelles sont les ressources et activités apportées par vos partenaires?",
+		"BusinessCanvasKeyResources": "Ressources clés",
+		"BusinessCanvasKeyResourcesTitle": "Ressources clés",
+		"BusinessCanvasKeyResourcesSubTitle": "Ressources clés",
+		"BusinessCanvasKeyResourcesGuidance": "Ressources clés",
+		"BusinessCanvasKeyResourcesExample": "Ressources clés",
+		"BusinessCanvasKeyResourcesPlaceholder": "Quelles ressources sont nécessaires pour réaliser l’ensemble des actions?",
 		"FillIt": "A remplir !",
 		"AddNewItem": "Ajouter un nouvel item",
 		"AddNewItemPlaceHolder": "Entrez votre texte...",
 		"SaveItem": "Sauvegarder",
 		"DeleteItem": "Supprimer",
-		"ShowExample": "Exemple"
+		"ShowExample": "Exemple",
+		"ChooseLogo": "Selectionnez une image (resolution max : 300px*300px)"
 	},
 	"ONBOARDINGPAGE":{
 		"Title":"Bienvenue !!",
 		"SubTitle":"APPRENONS À SE CONNAÎTRE",
 		"CurrentSituation":"Quelle est votre situation actuelle",
-		"CurrentSituationItem1":"étudiant", 
-		"CurrentSituationItem2":"salarié",
-		"CurrentSituationItem3":"congé sabbatique ou création entreprise",
-		"CurrentSituationItem4":"chômage",
-		"CurrentSituationItem5":"indépendant",
-		"CurrentSituationItem6":"retraité",
+		"CurrentSituationItem1":"Etudiant", 
+		"CurrentSituationItem2":"Salarié",
+		"CurrentSituationItem3":"Congé sabbatique ou création entreprise",
+		"CurrentSituationItem4":"Chômage",
+		"CurrentSituationItem5":"Indépendant",
+		"CurrentSituationItem6":"Retraité",
 		"Experience":"Quelle expérience avez-vous en lien avec votre projet ",
-		"ExperienceItem1":"novice",
-		"ExperienceItem2":"expérimenté ",
-		"ExperienceItem3":"expert",
+		"ExperienceItem1":"Novice",
+		"ExperienceItem2":"Expérimenté ",
+		"ExperienceItem3":"Expert",
 		"Motivation":"Quel est votre objectif",
 		"MotivationItem1":"On verra bien",
-		"MotivationItem2":"création d’entreprise dans plus d’1 an",
-		"MotivationItem3":"création d’entreprise dans moins d’1 an",
-		"MotivationItem4":"en cours de création",
-		"MotivationItem5":"entreprise créée à développer",
+		"MotivationItem2":"Création d’entreprise dans plus d’1 an",
+		"MotivationItem3":"Création d’entreprise dans moins d’1 an",
+		"MotivationItem4":"En cours de création",
+		"MotivationItem5":"Entreprise créée à développer",
 		"CreateProjectButton":"Démarrez votre premier projet maintenant !",
 		"SubTitleStep1":"Votre Projet",
-		"ProjectName":"Nom officiel ou nom de code (peut être modifié plus tard)",
+		"ProjectName":"Nom officiel ou nom de code",
 		"ProjectDomains":"Dans quel secteur d’activité (liste des secteurs)",
-		"ProjectMaturity":"Maturité du projet",
-		"ProjectMaturityItem1":"valider mon produit et/ou mon marché)",
-		"ProjectMaturityItem2":"développement (je lance mon entreprise)",
-		"ProjectMaturityItem3":"accélération (je veux grossir)",
+		"ProjectMaturity":"Maturité du projet", 
+		"ProjectMaturityItem1":"Découvrir l'entrepreneuriat et trouver mon idée", 
+		"ProjectMaturityItem2":"Validation de mon idée",
+		"ProjectMaturityItem3":"Lancer mon produit/service",
+		"ProjectMaturityItem4":"Croissance ou Accélération de mon entreprise existante",
 		"StartNewProjectButton1":"Specifiez vos ressources !",
 		"StartNewProjectButton2":"Créez votre projet !",
 		"SubTitleStep2":"Vos Ressources",
 		"ProjectTeam":"Votre équipe ",
-		"ProjectTeamItem1":"seul",  
-		"ProjectTeamItem2":"seul et en recherche d’associés",  
-		"ProjectTeamItem3":"plusieurs associés au complet",  
+		"ProjectTeamItem1":"Seul",  
+		"ProjectTeamItem2":"Seul et en recherche d’associés",  
+		"ProjectTeamItem3":"Plusieurs associés au complet",  
 		"ProjectTeamProfile":"Votre profil d’équipe ",  
-		"ProjectTeamProfileItem1":"technique",  
-		"ProjectTeamProfileItem2":"commercial",  
-		"ProjectTeamProfileItem3":"finance/administratif",  
-		"ProjectTeamProfileItem4":"expert",  
+		"ProjectTeamProfileItem1":"Technique",  
+		"ProjectTeamProfileItem2":"Commercial",  
+		"ProjectTeamProfileItem3":"Finance/administratif",  
+		"ProjectTeamProfileItem4":"Expert",  
 		"AssociateNumber":"Nombre d'associé(s)" , 
 		"FinancialResources" : "Ressource financière (fait ou en prévision)" ,
-		"FinancialResourcesItem1" : "à définir" ,
-		"FinancialResourcesItem2" : "fond personnel" ,
-		"FinancialResourcesItem3" : "prêt bancaire" ,
-		"FinancialResourcesItem4" : "levée de fond"
+		"FinancialResourcesItem1" : "A définir" ,
+		"FinancialResourcesItem2" : "Fond personnel" ,
+		"FinancialResourcesItem3" : "Prêt bancaire" ,
+		"FinancialResourcesItem4" : "Levée de fond"
 
 	},
 	"PARTNERS":{
@@ -226,5 +237,41 @@
 		"ImgUrl":"URL de l'image",
 		"Description":"Description",
 		"Labels":"Labels"
+	},
+	"TOOLS":{
+		"CATEGORIES":{
+			"1" :"Collaboratif",
+			"2" :"Tache",
+			"3" :"Gestion de projet",
+			"4" :"Planning",
+			"5" :"Contenu",
+			"6" :"Presentation",
+			"7" :"Tableur",
+			"8" :"Cloud",
+			"9" :"Stockage",
+			"10" :"Partage",
+			"11" :"Icone",
+			"12" :"Logo",
+			"13" :"Photo",
+			"14" :"Web",
+			"15" :"Chat",
+			"16" :"Communication",
+			"17" :"Contact",
+			"18" :"Email",
+			"19" :"Graphique",
+			"20" :"Image",
+			"21" :"Formulaire",
+			"22" :"Enquete",
+			"23" :"Sondage",
+			"24" :"Marque",
+			"25" :"Nom",
+			"26" :"Developpement",
+			"27" :"Application",
+			"28" :"Goodies",
+			"29" :"Merchandising",
+			"30" :"Quizz",
+			"31" :"Enquête",
+			"32" :"Relation client"
+		}
 	}
 }
